syntax = "proto3";

option java_multiple_files = true;
option java_package = "artie.pedagogicalintervention.webservice.stubs";

service Chat {
  rpc GetResponse (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
  string user_id = 1;
  string context_id = 2;
  string message = 3;
  string prompt = 4;
}

message ChatResponse {
  string user_id = 1;
  string context_id = 2;
  string reply = 3;
}